fix: add alignment and focus related fixes for Shellbar (#2179)
* fix: add alignment amd focus related fixes to Shellbar

* update storyshot [ci visual]

* add aria label for the hamburger button

* [ci visual]

--- a/src/product-switch.scss
+++ b/src/product-switch.scss
@@ -1,6 +1,7 @@
 @import "./new-settings";
 @import "./mixins";
 @import "./drag-and-drop";
+@import "./mixins/button/button-helper";
 
 /*!
 .fd-product-switch
@@ -54,6 +55,12 @@ $block: #{$fd-namespace}-product-switch;
     @include fd-active-pressed-selected() {
       color: var(--sapShell_Active_TextColor);
       background-color: var(--sapShell_Active_Background);
+    }
+
+    @include fd-focus() {
+      @include buttonFocus() {
+        outline-color: var(--sapContent_ContrastFocusColor);
+      }
     }
   }
 
